2007-01-14  Philip Van Hoof <pvanhoof@gnome.org>

	* Implementation for TNY_HEADER_FLAG_CACHED and
	TNY_HEADER_FLAG_PARTIAL for IMAP and POP3
	* Introduction of TNY_HEADER_FLAG_CACHED and 
	TNY_HEADER_FLAG_PARTIAL in the TnyHeader type

	* Introduction of new API tny_send_queue_cancel

	* This was a major API change

2007-01-13  Philip Van Hoof <pvanhoof@gnome.org>

	* Introduction of the TnyLockable type
	* Implementation of TnyGtkLockable and TnyNoopLockable
	* Ui locking in TnySessionCamel
	* Async authentication in TnySessionCamel
	* Async alerts in TnySessionCamel
	* Updated API documentation

	* This was a major API change

2007-01-12  Philip Van Hoof <pvanhoof@gnome.org>

	* Refreshing POP folders, bugfix

2007-01-11  Philip Van Hoof <pvanhoof@gnome.org>

	* Implemented partial message retrieval for POP
	* Implemented detecting partial retrieval status for POP

2007-01-10  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Fix tiny leak in tny_folder_store_query_add_item

2007-01-10  Philip Van Hoof <pvanhoof@gnome.org>

	* Improved the camel-lite POP summary support by detecting the TOP
	capability

2007-01-09  Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>

	* Added some extra TnyFolderType's for use in tinymail clients

2007-01-09  Philip Van Hoof <pvanhoof@gnome.org>

	* Temporary POP implementation (CamelFolderSummary support)

2007-01-09  Philip Van Hoof <pvanhoof@gnome.org>

	* Implemented a very memory efficient message fetching mechanism in
	camel-lite (it uses streams rather than copying things in memory)
	* Improved the partial message retrieval with this new method too
	* Partial retrieval status detection
	* Added the TnyPair type
	* Added the tny_mime_part_get_header_pairs API

	* This was a major API change

2007-01-08  Philip Van Hoof <pvanhoof@gnome.org>

	* Implemented first pieces of the partial message retrieval
	* Further implemented TnyCamelPopFolder and TnyCamelPopAccount

2007-01-04  Philip Van Hoof <pvanhoof@gnome.org>
